
If you are interested in the changes and features that were introduced in earlier versions, see the <<./history.adoc#history,Change History>>.

[[whats-new]]

== What's New in Spring Integration 6.0?

If you are interested in more details, see the Issue Tracker tickets that were resolved as part of the 6.0 development process.

In general the project has been moved to Java 17 baseline and migrated from Java EE to Jakarta EE.

[[x6.0-new-components]]
=== New Components

[[x6.0-graphql]]
=== GraphQL Support

The GraphQL support has been added.
See <<./graphql.adoc#graphql,GraphQL Support>> for more information.

[[x6.0-general]]
=== General Changes

The messaging annotations don't require a poller attribute as an array of @Poller any more.
See <<./configuration.adoc#configuration-using-poller-annotation,Using the @Poller Annotation>> for more information.

[[x6.0-http]]
=== HTTP Changes

The `#cookies` variable for expression evaluation context, exposed in the `HttpRequestHandlingEndpointSupport`, is now a `MultiValueMap` to carry all the values for cookies set by the client.
See <<./http.adoc#http,HTTP Support>> for more information.

[[x6.0-rmi]]
=== RMI Removal

The `spring-integration-rmi` module has been removed altogether after being deprecated in previous versions.
There is no replacement: it is recommended to migrate to more secure network and application protocols, such as WebSockets, RSockets, gRPC or REST.

=== Apache Kafka Changes

When providing a `RetryTemplate` on the inbound gateway or message-driven channel adapter, if an `errorChannel` is also provided, an `ErrorMessageSendingRecoverer` is automatically configured.

In addition, the new `KafkaErrorMessageSendingRecoverer` is provided; this can be used with a `DefaultErrorHandler` to avoid issues with long aggregated retry delays causing partitions rebalances.

See <<./kafka.adoc#kafka,Spring for Apache Kafka Support>> for more information.